# sc2iq

./: .editorconfig  .gitattributes  .gitignore  README.md  azure.yaml  docker-compose.yml  sc2iq.code-workspace
.azure/: .gitignore
.devcontainer/: devcontainer.env  devcontainer.json  onCreateCommand.sh  postCreateCommand.sh  postStartCommand.sh
apps/: README.md
apps/client/: README.md  package.json
apps/client-remix/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  remix.config.js  start.sh  tailwind.config.js  tailwind.config.ts
apps/graphql/: package-lock.json  package.json  tsconfig.json
apps/question-answer/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
apps/service/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
bicep/: bicepconfig.json  main.bicep
bicep/modules/: clientContainerApp.bicep  questionAnswerContainerApp.bicep  sqlDatabase.bicep
bots/twitch-stats/: package-lock.json  tsconfig.json
client/: package.json  tsconfig.json
client/public/: manifest.json
client/src/: App.css  App.tsx  index.css  index.tsx
graphql/: .gitignore  codegen.yml  package-lock.json  package.json
graphql/src/: index.ts
infra/: bicepconfig.json  main.bicep  main.parameters.json
scripts/: common.psm1  deploy.ps1  misc.ps1  what-if.sh
service/: package-lock.json  package.json
service/src/: index.ts  (+1 more)
tools/: README.md
tools/openai-transcribe-python/: README.md  pyproject.toml
tools/openai-transcribe-python/openai_transcribe_python/: transcribe.py
ui/: .gitignore  package.json
(+233 files in other folders)
