[tool.poetry]
name = "openai-transcribe-python"
version = "0.1.0"
description = ""
authors = ["Matt Mazzola <mattmazzola@live.com>"]
readme = "README.md"
packages = [{include = "openai_transcribe_python"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
